--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
+      type="image"
+      href="/elearningIcon.png"
     />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
 
-    <title>Vite + React</title>
+    <title>Elearning</title>
   </head>
   <body>
     <div id="root"></div>
